# reviveit.ch

./: .gitignore  README.md  backend.nix  flake.nix  package-lock.json  package.json
backend/: .gitignore  Cargo.toml  Rocket.toml
backend/db/: db.sqlite
backend/migrations/2023-10-26-133418_create_cpus/: down.sql  up.sql
backend/migrations/2023-10-27-144256_create_gpus/: down.sql  up.sql
backend/migrations/2023-10-27-154520_create_mobos/: down.sql  up.sql
backend/migrations/2023-10-27-162219_create_rams/: down.sql  up.sql
backend/migrations/2023-10-27-165139_create_psu/: down.sql  up.sql
backend/migrations/2023-10-27-171543_create_ssd/: down.sql  up.sql
backend/migrations/2023-10-27-174459_create_hdd/: down.sql  up.sql
backend/migrations/2023-10-27-175300_create_fan/: down.sql  up.sql
backend/migrations/2023-10-27-180852_create_cooler/: down.sql  up.sql
backend/migrations/2023-10-27-182255_create_case/: down.sql  up.sql
backend/migrations/2023-11-02-150110_create_admins/: up.sql
backend/migrations/2023-11-22-190727_create_computers/: up.sql
backend/migrations/2023-11-23-083802_create_computer_fans/: down.sql  up.sql
backend/migrations/2023-11-23-083951_create_computer_ssds/: down.sql  up.sql
backend/migrations/2023-11-23-083954_create_computer_hdds/: down.sql  up.sql
backend/migrations/2023-11-23-084007_create_computer_rams/: down.sql  up.sql
backend/migrations/2024-02-06-205240_create_articles/: up.sql
backend/src/: main.rs  rocket_anyhow.rs
backend/src/models/: admin.rs  article.rs  case.rs  computer.rs  cooler.rs  cpu.rs  fan.rs  (+7 more)
(+34 files in other folders)
