[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="=0.5.0-rc.3", features = ["json", "secrets"]}
diesel =  { version = "2", features = ["sqlite", "r2d2"]}
diesel_migrations = "2"
rocket_sync_db_pools = {version = "=0.1.0-rc.3", features = ["diesel_sqlite_pool"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
anyhow = "1"

[dev-dependencies]
parking_lot = "0.12"
rand = "0.8"